--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add-2</title>
+    <title>Add-1</title>
   </head>
   <body>
     <!-- <script src="./js/1-1.js" type="module"></script> -->
@@ -40,6 +40,6 @@
     <!-- <script src="./js/1-33.js" type="module"></script> -->
     <!-- <script src="./js/1-34.js" type="module"></script> -->
     <!-- <script src="./js/1-35.js" type="module"></script> -->
-    <!-- <script src="./js/1-36.js" type="module"></script> -->
+    <script src="./js/1-36.js" type="module"></script>
   </body>
 </html>
